--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
+# QuickLoad Backend Configuration
 BACKEND_SERVER=https://quickloadbe.cogweel.com
+LOCATION_RATES_SERVER=https://quickloadbe.cogweel.com
+API_BASE_URL=https://quickloadbe.cogweel.com/api
+
+# Alternative endpoints (if needed)
+# BACKEND_SERVER=http://185.199.52.115:4100
+# LOCATION_RATES_SERVER=http://185.199.52.115:4100
